--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^1.1.2",
     "bootstrap": "^5.2.2",
     "chart.js": "^3.9.1",
+    "dateformat": "^5.0.3",
     "moment": "^2.29.4",
     "novelcovid": "^3.0.2",
     "vue": "^3.2.38",
